--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">
     <link rel="stylesheet" href="/assets/css/style.css" type="text/css">
     <title>Rosie</title>
 </head>
@@ -27,16 +28,16 @@
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 menu-color-home list-inline-item menuitem">
-                                <a href="#"> <i class="fa-solid fa-house" aria-hidden="true"></i><span> Home</span></a>
+                                <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-house" aria-hidden="true"></i><span> Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 menu-color-resume list-inline-item menuitem">
-                                <a href="#"> <i class="fa-solid fa-graduation-cap" aria-hidden="true"></i><span> Resume</span></a>
+                                <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-graduation-cap" aria-hidden="true"></i><span> Resume</span></a>
                             </li>
                             <li class="col-6 col-sm-3 menu-color-contact list-inline-item menuitem">
-                                <a href="#"> <i class="fa-solid fa-address-book" aria-hidden="true"></i><span> Contact</span></a>
+                                <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-address-book" aria-hidden="true"></i><span> Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 menu-color-download list-inline-item menuitem">
-                                <a href="#"> <i class="fa-solid fa-download" aria-hidden="true"></i><span> Download</span></a>
+                                <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-download" aria-hidden="true"></i><span> Download</span></a>
                             </li>
                         </ul>
                     </div>
@@ -47,8 +48,18 @@
     <section>
 
     </section>
-    <footer>
-
+    <footer class="container-fluid">
+        <div class="row">
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">About</h5>
+            </div>
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">Download</h5>
+            </div>
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">Social</h5>
+            </div>
+        </div>
     </footer>
 
 </body>
