--- a/index.html
+++ b/index.html
@@ -28,16 +28,20 @@
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 menu-color-home list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-house" aria-hidden="true"></i><span> Home</span></a>
+                                <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-house"
+                                        aria-hidden="true"></i><span> Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 menu-color-resume list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-graduation-cap" aria-hidden="true"></i><span> Resume</span></a>
+                                <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-graduation-cap"
+                                        aria-hidden="true"></i><span> Resume</span></a>
                             </li>
                             <li class="col-6 col-sm-3 menu-color-contact list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-address-book" aria-hidden="true"></i><span> Contact</span></a>
+                                <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-address-book"
+                                        aria-hidden="true"></i><span> Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 menu-color-download list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-download" aria-hidden="true"></i><span> Download</span></a>
+                                <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-download"
+                                        aria-hidden="true"></i><span> Download</span></a>
                             </li>
                         </ul>
                     </div>
@@ -49,15 +53,68 @@
 
     </section>
     <footer class="container-fluid">
-        <div class="row">
+        <div id="footer-details" class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
+                <p class="inline-block">
+                    Full Stack Web Developer. Skilled in everything from HTML to Heroku.
+                    The capacity for structural and deisgn thinking.
+                </p>
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
+                <p class="inline-block">Need a printable version of my CV> Download it here.<a href="#"
+                    target="_blank" class="cv-pdf"><i class="fa-solid fa-download" aria-hidden="true"></i><span
+                        class="sr-only">Download link</span>
+                </a>
+                </p>
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Social</h5>
+                <ul class=".list-inline social-links">
+                    <li class="list-inline-item">
+                        <a target="_blank" href="#">
+                            <i class="fa-brands fa-facebook" aria-hidden="true"></i>
+                            <span
+                        class="sr-only">Facebook link</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="#">
+                            <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+                            <span
+                        class="sr-only">Instagram link</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="#">
+                            <i class="fa-brands fa-x-twitter" aria-hidden="true"></i>
+                            <span
+                        class="sr-only">X/Twitter link</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="#">
+                            <i class="fa-brands fa-linkedin" aria-hidden="true"></i>
+                            <span
+                        class="sr-only">LinkedIn Link</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="#">
+                            <i class="fa-brands fa-pinterest" aria-hidden="true"></i>
+                            <span
+                        class="sr-only">Pinterest Link</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="#">
+                            <i class="fa-brands fa-youtube" aria-hidden="true"></i>
+                            <span
+                        class="sr-only">YouTube Link</span>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </footer>
