Completed contact page and created resume page, begun styling

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 <body>
     <header>
         <div class="row no-gutters">
-            <a href="index.html" class="col-md-4 logo">
-
-            </a>
+            <a href="index.html" class="col-md-4 logo"></a>
             <div class="col-md-8">
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
@@ -29,19 +27,19 @@
                         <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 menu-color-home list-inline-item menuitem">
                                 <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-house"
-                                        aria-hidden="true"></i><span> Home</span></a>
+                                        aria-hidden="true"></i><span>Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 menu-color-resume list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-graduation-cap"
-                                        aria-hidden="true"></i><span> Resume</span></a>
+                                <a href="/resume.html" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-graduation-cap"
+                                        aria-hidden="true"></i><span>Resume</span></a>
                             </li>
                             <li class="col-6 col-sm-3 menu-color-contact list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-address-book"
-                                        aria-hidden="true"></i><span> Contact</span></a>
+                                <a href="/contact.html" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-address-book"
+                                        aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 menu-color-download list-inline-item menuitem">
                                 <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-download"
-                                        aria-hidden="true"></i><span> Download</span></a>
+                                        aria-hidden="true"></i><span>Download</span></a>
                             </li>
                         </ul>
                     </div>
@@ -49,8 +47,66 @@
             </div>
         </div>
     </header>
-    <section class="container-fluid">
-        <div class="row row-table">
+    <section>
+        <div class="row">
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-heading">
+                            Personal Info
+                        </h3>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Name: 
+                        </p>    
+                    </div>
+                    <div class="value">
+                        <p>
+                            Rosie Odenkirk
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Address: 
+                        </p>    
+                    </div>
+                    <div class="value">
+                        <p>
+                            17 Riverdale, Catskills, NY USA
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Phone: 
+                        </p>    
+                    </div>
+                    <div class="value">
+                        <p>
+                            55 204 1793
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Email: 
+                        </p>    
+                    </div>
+                    <div class="value">
+                        <p>
+                            rosie.odenkirk@hansaw.com
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <!-- col-md-8 ensures 8/12 or 2/3 width on medium (>=768px) and larger screens -->
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col">
@@ -66,8 +122,8 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">What do I do?</h4>
                                 <p>
-                                    I am a skilled Full Stack Developer with a wealth of diverse life and techincal
-                                    experince that I bring to every project.
+                                    I am a skilled Full Stack Developer with a wealth of diverse life and technical
+                                    experience that I bring to every project.
                                 </p>
                             </div>
                         </div>
@@ -82,7 +138,7 @@
                                 <p>
                                     I follow form as well as function. I know that the aesthetics of effective 
                                     design combined with application speed, security and reliability combine to 
-                                    create a great user experince.
+                                    create a great user experience.
                                 </p>
                             </div>
                         </div>
@@ -96,8 +152,8 @@
                                 <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
                                 <p>
                                     I work quickly and effectively in getting things built and 
-                                    working accross the stack. I'm an excellent communicator who 
-                                    thrives in bright and enthusiatic teams and I'm also a self 
+                                    working across the stack. I'm an excellent communicator who 
+                                    thrives in bright and enthusiastic teams and I'm also a self 
                                     starter when working solo.
                                 </p>
                             </div>
