--- a/resume.html
+++ b/resume.html
@@ -14,9 +14,7 @@
 <body>
     <header>
         <div class="row no-gutters">
-            <a href="index.html" class="col-md-4 logo">
-
-            </a>
+            <a href="/index.html" class="col-md-4 logo"></a>
             <div class="col-md-8">
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
@@ -28,15 +26,16 @@
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 menu-color-home list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-house"
+                                <a href="/index.html" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-house"
                                         aria-hidden="true"></i><span> Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 menu-color-resume list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-graduation-cap"
-                                        aria-hidden="true"></i><span> Resume</span></a>
+                                <a href="/resume.html" class="hvr-sweep-to-bottom"> <i
+                                        class="fa-solid fa-graduation-cap" aria-hidden="true"></i><span>
+                                        Resume</span></a>
                             </li>
                             <li class="col-6 col-sm-3 menu-color-contact list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-address-book"
+                                <a href="/contact.html" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-address-book"
                                         aria-hidden="true"></i><span> Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 menu-color-download list-inline-item menuitem">
@@ -50,7 +49,102 @@
         </div>
     </header>
     <section>
-
+        <div class="row">
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-heading">
+                            Work History
+                        </h3>
+                    </div>
+                </div>
+            </div>
+            <!-- col-md-8 ensures 8/12 or 2/3 width on medium (>=768px) and larger screens -->
+            <div class="col-md-8 bg-color-three-reasons section-column">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="section-heading uppercase">My Skills</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa-solid fa-tv" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Front End</h4>
+                                <p>
+                                    I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript. I also have extensive experience in Front End Frameworks such as Angular and React
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa-solid fa-gears" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Back End</h4>
+                                <p>
+                                    I specialize in data-driven web applications. Many of my projects utilise document-based data. I use Python and Django in conjunction with MongoDB to process and present information.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row progress-section">
+                    <div class="col">
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                                aria-valuemax="100" style="width:90%;">
+                                <span class="sr-only">90% complete</span>
+                                <span class="progress-type"
+                                    style="background-color: rgba(25, 25, 25, 0.2); color: #fafafa; font-weight: 400; position: absolute; left: 0px; padding: 13px 25px;">HTML
+                                    / HTML5</span>
+                            </div>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                                <span class="progress-type"
+                                    style="background-color: rgba(25, 25, 25, 0.2); color: #fafafa; font-weight: 400; position: absolute; left: 0px; padding: 13px 25px;">CSS
+                                    / CSS3</span>
+                            </div>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                aria-valuemax="100" style="width:70%;">
+                                <span class="sr-only">70% complete</span>
+                                <span class="progress-type"
+                                    style="background-color: rgba(25, 25, 25, 0.2); color: #fafafa; font-weight: 400; position: absolute; left: 0px; padding: 13px 25px;">JavaScript
+                                    / jQuery</span>
+                            </div>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                                <span class="progress-type"
+                                    style="background-color: rgba(25, 25, 25, 0.2); color: #fafafa; font-weight: 400; position: absolute; left: 0px; padding: 13px 25px;">Django
+                                    / Python</span>
+                            </div>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                                <span class="progress-type"
+                                    style="background-color: rgba(25, 25, 25, 0.2); color: #fafafa; font-weight: 400; position: absolute; left: 0px; padding: 13px 25px;">SQL
+                                    / NoSQL</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
@@ -63,55 +157,49 @@
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
-                <p class="inline-block">Need a printable version of my CV> Download it here.<a href="#"
-                    target="_blank" class="cv-pdf"><i class="fa-solid fa-download" aria-hidden="true"></i><span
-                        class="sr-only">Download link</span>
-                </a>
+                <p class="inline-block">Need a printable version of my CV> Download it here.<a href="#" target="_blank"
+                        class="cv-pdf"><i class="fa-solid fa-download" aria-hidden="true"></i><span
+                            class="sr-only">Download link</span>
+                    </a>
                 </p>
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Social</h5>
-                <ul class=".list-inline social-links">
+                <ul class="list-inline social-links">
                     <li class="list-inline-item">
                         <a target="_blank" href="#">
                             <i class="fa-brands fa-facebook" aria-hidden="true"></i>
-                            <span
-                        class="sr-only">Facebook link</span>
+                            <span class="sr-only">Facebook link</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
                         <a target="_blank" href="#">
                             <i class="fa-brands fa-instagram" aria-hidden="true"></i>
-                            <span
-                        class="sr-only">Instagram link</span>
+                            <span class="sr-only">Instagram link</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
                         <a target="_blank" href="#">
                             <i class="fa-brands fa-x-twitter" aria-hidden="true"></i>
-                            <span
-                        class="sr-only">X/Twitter link</span>
+                            <span class="sr-only">X/Twitter link</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
                         <a target="_blank" href="#">
                             <i class="fa-brands fa-linkedin" aria-hidden="true"></i>
-                            <span
-                        class="sr-only">LinkedIn Link</span>
+                            <span class="sr-only">LinkedIn Link</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
                         <a target="_blank" href="#">
                             <i class="fa-brands fa-pinterest" aria-hidden="true"></i>
-                            <span
-                        class="sr-only">Pinterest Link</span>
+                            <span class="sr-only">Pinterest Link</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
                         <a target="_blank" href="#">
                             <i class="fa-brands fa-youtube" aria-hidden="true"></i>
-                            <span
-                        class="sr-only">YouTube Link</span>
+                            <span class="sr-only">YouTube Link</span>
                         </a>
                     </li>
                 </ul>
