--- a/contact.html
+++ b/contact.html
@@ -28,15 +28,15 @@
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 menu-color-home list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-house"
+                                <a href="/index.html" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-house"
                                         aria-hidden="true"></i><span> Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 menu-color-resume list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-graduation-cap"
+                                <a href="/resume.html" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-graduation-cap"
                                         aria-hidden="true"></i><span> Resume</span></a>
                             </li>
                             <li class="col-6 col-sm-3 menu-color-contact list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-address-book"
+                                <a href="/contact.html" class="hvr-sweep-to-bottom"> <i class="fa-solid fa-address-book"
                                         aria-hidden="true"></i><span> Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 menu-color-download list-inline-item menuitem">
@@ -56,7 +56,16 @@
                 <h5 class="uppercase text-center">Let's work together!</h5>
 
                 <div class="center-form">
-                    <form action="" method="get"></form>
+                    <form>
+                        <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required>
+                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required>
+                        <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
+                        <div class="form-row text-center">
+                            <div class="col">
+                                <button type="submit" class="btn btn-secondary">Send Project Request</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
